--- a/public/index.html
+++ b/public/index.html
@@ -12,5 +12,9 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script
+      src="https://kit.fontawesome.com/c58d26cb9d.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
