--- a/public/index.html
+++ b/public/index.html
@@ -5,16 +5,12 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Doctor Bari" />
+    <meta name="description" content="Bangladesh Dental Care" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Doctor Bari</title>
+    <title>Bangladesh Dental Care</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <script
-      src="https://kit.fontawesome.com/c58d26cb9d.js"
-      crossorigin="anonymous"
-    ></script>
   </body>
 </html>
